--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
-    "@react-native-community/picker": "^1.6.5",
-    "@react-native-community/slider": "^2.0.9",
+    "@react-native-community/picker": "^1.6.6",
+    "@react-native-community/slider": "^3.0.3",
+    "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "babel-plugin-dotenv-import": "^2.1.0",
     "react": "16.13.1",
-    "react-native": "0.63.1",
+    "react-native": "0.63.2",
+    "react-native-disable-battery-optimizations-android": "^1.0.7",
     "react-native-material-menu": "^1.1.3",
     "react-native-modal-dropdown-with-flatlist": "^0.7.1",
     "react-native-paper": "^4.0.1",
-    "react-native-picker-select": "^7.0.0",
+    "react-native-picker-select": "^8.0.0",
     "react-native-popup-menu": "^0.15.9",
     "react-native-sound": "^0.11.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-ytdl": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/core": "7.9.6",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/runtime": "7.9.6",
-    "@react-native-community/eslint-config": "0.0.5",
-    "babel-jest": "24.9.0",
+    "@babel/core": "7.11.1",
+    "@babel/runtime": "7.11.2",
+    "@react-native-community/eslint-config": "1.1.0",
+    "babel-jest": "25.5.1",
     "eslint": "6.8.0",
-    "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.58.0",
-    "react-native-dotenv": "^2.2.0",
-    "react-test-renderer": "16.11.0"
+    "jest": "25.5.4",
+    "metro-react-native-babel-preset": "0.59.0",
+    "react-test-renderer": "16.13.1"
   },
   "jest": {
     "preset": "react-native"
