--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-disable-battery-optimizations-android": "^1.0.7",
     "react-native-material-menu": "^1.1.3",
     "react-native-modal-dropdown-with-flatlist": "^0.7.1",
+    "react-native-music-control": "^1.0.0",
     "react-native-paper": "^4.0.1",
     "react-native-picker-select": "^8.0.0",
     "react-native-popup-menu": "^0.15.9",
