--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@react-native-community/picker": "^1.6.6",
     "@react-native-community/slider": "^2.0.9",
     "babel-plugin-dotenv-import": "^2.1.0",
-    "react": "16.13.1",
-    "react-native": "0.63.3",
+    "react": "^16.13.1",
+    "react-native": "^0.63.3",
     "react-native-disable-battery-optimizations-android": "^1.0.7",
     "react-native-material-menu": "^1.1.3",
     "react-native-modal-dropdown-with-flatlist": "^0.7.1",
@@ -25,7 +25,7 @@
     "react-native-popup-menu": "^0.15.9",
     "react-native-sound": "^0.11.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-ytdl": "^4.0.2"
+    "react-native-ytdl": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "7.11.1",
